--- a/app/panels/Panel.css
+++ b/app/panels/Panel.css
@@ -1,6 +1,6 @@
 .Panel {
   font-family: cody, cursive;
-  font-size: 25vw;
+  font-size: 25vmin;
   color: white;
   text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   align-items: center;
