--- a/app/panels/Panel5.css
+++ b/app/panels/Panel5.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 3vw;
+  margin: 3vmin;
   overflow: hidden;
   flex-wrap: wrap;
 }
@@ -15,6 +15,6 @@
 }
 .Panel5-imageContainer {
   flex: 1;
-  min-width: 8vw;
-  margin: 1vw;
+  min-width: 8vmin;
+  margin: 1vmin;
 }
